2000-04-11  John Jannotti  <jj@lcs.mit.edu>

	* tnt.el (tnt-shutdown): Changed name from tnt-buddy-shutdown as
	it has become a catchall for all shutdown realted stuff.  tnt-kill 
	and tnt-handle-close had some duplicated code that I put here
	because, inevitably, someone would put some shutdown stuff in one
	but not the other.
	(tnt-repeat): Added.  Sets up a repeating timer in a way that
	XEmacs (and Emacs) likes.  Made it its own function because
	interval has to be the first and second arg to run-at-time, which
	looks ugly.
	(tnt-buggy-idle): Added a variable tnt-buggy-idle which helps
	control whether we do idle handling.  It defaults to t so we do
	not do idle handling.  It should be some sort of complicated test
	to see if the bug exists.  For now, to override it, you must set
	it to nil *before* loading tnt.el since it controls the default
	setting of a later variable.
	(tnt-im-mode): Use syntax-table and abbrev-table from text-mode.
	(tnt-chat-mode): Use syntax-table and abbrev-table from text-mode.
	(tnt-buddy-list-mode): Use syntax-table from text-mode.
	(tnt-buddy-edit-mode): Use syntax-table from text-mode.
	

2000-04-10  Neil ''Fred'' Picciotto  <fred@guido.derf.net>

	* tnt.el (tnt-handle-closed): now checking whether unidle-timer
	exists before canceling it, rather than when idle-timer exists.
	(tnt-handle-sign-on): uncommented out the unidle-timer.
	use-idle-timer is still defaulting to nil, so this doesn't really
	need to be commented out.
	(tnt-timers-available): added.  checks (fboundp 'run-at-time).
	(tnt-use-keepalive): now defaults to timers-available.
	(tnt-use-buddy-update-timer): now defaults to timers-available.
	(tnt-use-idle-timer): changed the note in the doc string to better
	describe the current bug.
	(tnt-email-binary): just made the doc string more grammatical and
	informative.

	* toc.el (toc-handle-receive): just fixed some whitespace.  i
	guess i'm as anal as john.

2000-04-07  Neil ''Fred'' Picciotto  <fred@guido.derf.net>
